--- a/doc/agile/v1/sprint_backlog_06.org
+++ b/doc/agile/v1/sprint_backlog_06.org
@@ -13,23 +13,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-29 Fri 12:57]
+#+CAPTION: Clock summary at [2017-09-29 Fri 13:11]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *17:03* |       |      | 100.0 |
+| *Total time*                                                                | *17:16* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 17:03   |       |      | 100.0 |
-| Active                                                                      |         | 17:03 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 2:19 |  13.6 |
+| Stories                                                                     | 17:16   |       |      | 100.0 |
+| Active                                                                      |         | 17:16 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 2:19 |  13.4 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:38 |   3.7 |
 | CANCELLED Add an "at" field to transform stats                              |         |       | 0:10 |   1.0 |
-| COMPLETED Move enablement into yarn                                         |         |       | 1:01 |   6.0 |
-| COMPLETED Consider revamping the project logo                               |         |       | 2:02 |  11.9 |
-| COMPLETED Rename top-level transformations                                  |         |       | 1:33 |   9.1 |
-| COMPLETED Clean-up context usage                                            |         |       | 0:25 |   2.4 |
-| STARTED Create the archetype location properties                            |         |       | 2:26 |  14.3 |
-| STARTED Generate file paths as a transform                                  |         |       | 6:29 |  38.0 |
+| COMPLETED Move enablement into yarn                                         |         |       | 1:01 |   5.9 |
+| COMPLETED Consider revamping the project logo                               |         |       | 2:02 |  11.8 |
+| COMPLETED Rename top-level transformations                                  |         |       | 1:33 |   9.0 |
+| COMPLETED Clean-up context usage                                            |         |       | 0:38 |   3.7 |
+| STARTED Create the archetype location properties                            |         |       | 2:26 |  14.1 |
+| STARTED Generate file paths as a transform                                  |         |       | 6:29 |  37.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -315,6 +315,7 @@ Tasks:
 
 *** COMPLETED Clean-up context usage                                  :story:
     CLOSED: [2017-09-29 Fri 12:57]
+    CLOCK: [2017-09-29 Fri 12:58]--[2017-09-29 Fri 13:11] =>  0:13
     CLOCK: [2017-09-29 Fri 12:32]--[2017-09-29 Fri 12:57] =>  0:25
 
 We've included context generation in the code generation
