--- a/doc/agile/v1/sprint_backlog_06.org
+++ b/doc/agile/v1/sprint_backlog_06.org
@@ -13,23 +13,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-29 Fri 13:11]
+#+CAPTION: Clock summary at [2017-09-29 Fri 15:29]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *17:16* |       |      | 100.0 |
+| *Total time*                                                                | *18:43* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 17:16   |       |      | 100.0 |
-| Active                                                                      |         | 17:16 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 2:19 |  13.4 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:38 |   3.7 |
-| CANCELLED Add an "at" field to transform stats                              |         |       | 0:10 |   1.0 |
-| COMPLETED Move enablement into yarn                                         |         |       | 1:01 |   5.9 |
-| COMPLETED Consider revamping the project logo                               |         |       | 2:02 |  11.8 |
-| COMPLETED Rename top-level transformations                                  |         |       | 1:33 |   9.0 |
-| COMPLETED Clean-up context usage                                            |         |       | 0:38 |   3.7 |
-| STARTED Create the archetype location properties                            |         |       | 2:26 |  14.1 |
-| STARTED Generate file paths as a transform                                  |         |       | 6:29 |  37.5 |
+| Stories                                                                     | 18:43   |       |      | 100.0 |
+| Active                                                                      |         | 18:43 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 2:19 |  12.4 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:38 |   3.4 |
+| CANCELLED Add an "at" field to transform stats                              |         |       | 0:10 |   0.9 |
+| COMPLETED Move enablement into yarn                                         |         |       | 1:01 |   5.4 |
+| COMPLETED Consider revamping the project logo                               |         |       | 2:02 |  10.9 |
+| COMPLETED Rename top-level transformations                                  |         |       | 1:33 |   8.3 |
+| COMPLETED Clean-up context usage                                            |         |       | 0:38 |   3.4 |
+| STARTED Housekeeper should know of text models                              |         |       | 1:16 |   6.8 |
+| STARTED Create the archetype location properties                            |         |       | 2:37 |  14.0 |
+| STARTED Generate file paths as a transform                                  |         |       | 6:29 |  34.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -322,7 +323,21 @@ We've included context generation in the code generation
 transform. This is not ideal. It should be the responsibility of the
 client to create the context.
 
+*** STARTED Housekeeper should know of text models                    :story:
+    CLOCK: [2017-09-29 Fri 14:13]--[2017-09-29 Fri 15:29] =>  1:16
+
+It should be the responsibility of the house keeper to collect the
+expected files and extract managed directories.
+
+The housekeeper API doesn't make a lot of sense either: we should just
+return the candidates for deletion rather than take in a lambda for
+deletion.
+
+The job of the "housekeeper" is to compute a list of unexpected
+files. Its name should be: =file_linter=.
+
 *** STARTED Create the archetype location properties                  :story:
+    CLOCK: [2017-09-29 Fri 14:02]--[2017-09-29 Fri 14:13] =>  0:11
     CLOCK: [2017-09-29 Fri 11:40]--[2017-09-29 Fri 12:13] =>  0:33
     CLOCK: [2017-09-29 Fri 11:17]--[2017-09-29 Fri 11:39] =>  0:22
     CLOCK: [2017-09-29 Fri 11:15]--[2017-09-29 Fri 11:16] =>  0:01
@@ -694,11 +709,6 @@ Then:
   they then do it for each request.
 
 Note also that a request should support multiple target models.
-
-*** Housekeeper should know of text models                            :story:
-
-It should be the responsibility of the house keeper to collect the
-expected files and extract managed directories.
 
 *** Detect unqualified stereotypes                                    :story:
 
