--- a/doc/agile/v1/sprint_backlog_06.org
+++ b/doc/agile/v1/sprint_backlog_06.org
@@ -13,24 +13,25 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-29 Fri 16:40]
+#+CAPTION: Clock summary at [2017-10-06 Fri 10:00]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *19:32* |       |      | 100.0 |
+| *Total time*                                                                | *20:06* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 19:32   |       |      | 100.0 |
-| Active                                                                      |         | 19:32 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 2:19 |  11.9 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:38 |   3.2 |
-| CANCELLED Add an "at" field to transform stats                              |         |       | 0:10 |   0.9 |
-| COMPLETED Move enablement into yarn                                         |         |       | 1:01 |   5.2 |
-| COMPLETED Consider revamping the project logo                               |         |       | 2:02 |  10.4 |
-| COMPLETED Rename top-level transformations                                  |         |       | 1:33 |   7.9 |
+| Stories                                                                     | 20:06   |       |      | 100.0 |
+| Active                                                                      |         | 20:06 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 2:19 |  11.5 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:45 |   3.7 |
+| CANCELLED Add an "at" field to transform stats                              |         |       | 0:10 |   0.8 |
+| COMPLETED Move enablement into yarn                                         |         |       | 1:01 |   5.1 |
+| COMPLETED Consider revamping the project logo                               |         |       | 2:02 |  10.1 |
+| COMPLETED Rename top-level transformations                                  |         |       | 1:33 |   7.7 |
 | COMPLETED Clean-up context usage                                            |         |       | 0:38 |   3.2 |
-| COMPLETED Housekeeper should know of text models                            |         |       | 2:05 |  10.7 |
-| STARTED Create the archetype location properties                            |         |       | 2:37 |  13.4 |
-| STARTED Generate file paths as a transform                                  |         |       | 6:29 |  33.2 |
+| COMPLETED Housekeeper should know of text models                            |         |       | 2:05 |  10.4 |
+| STARTED Create the archetype location properties                            |         |       | 2:42 |  13.4 |
+| STARTED Generate file paths as a transform                                  |         |       | 6:29 |  32.3 |
+| STARTED Rename the model to text transforms                                 |         |       | 0:22 |   1.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -689,6 +690,7 @@ We should check that =enable_unique_file_names= is set to true.
 Key: =quilt.cpp.flat_directory_mode.enabled=.
 
 *** STARTED Rename the model to text transforms                       :story:
+    CLOCK: [2017-10-06 Fri 09:47]--[2017-10-06 Fri 10:00] =>  0:13
     CLOCK: [2017-10-05 Thu 07:21]--[2017-10-05 Thu 07:30] =>  0:09
 
 We originally called the transforms "model to text" but actually they
