--- a/doc/agile/v1/sprint_backlog_06.org
+++ b/doc/agile/v1/sprint_backlog_06.org
@@ -13,26 +13,26 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-10-06 Fri 12:18]
+#+CAPTION: Clock summary at [2017-10-06 Fri 12:45]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *22:18* |       |      | 100.0 |
+| *Total time*                                                                | *22:24* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 22:18   |       |      | 100.0 |
-| Active                                                                      |         | 22:18 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 2:19 |  10.4 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:45 |   3.4 |
+| Stories                                                                     | 22:24   |       |      | 100.0 |
+| Active                                                                      |         | 22:24 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 2:19 |  10.3 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:45 |   3.3 |
 | CANCELLED Add an "at" field to transform stats                              |         |       | 0:10 |   0.7 |
-| COMPLETED Move enablement into yarn                                         |         |       | 1:01 |   4.6 |
+| COMPLETED Move enablement into yarn                                         |         |       | 1:01 |   4.5 |
 | COMPLETED Consider revamping the project logo                               |         |       | 2:02 |   9.1 |
-| COMPLETED Rename top-level transformations                                  |         |       | 1:33 |   7.0 |
+| COMPLETED Rename top-level transformations                                  |         |       | 1:33 |   6.9 |
 | COMPLETED Clean-up context usage                                            |         |       | 0:38 |   2.8 |
 | COMPLETED Housekeeper should know of text models                            |         |       | 2:05 |   9.3 |
 | COMPLETED Rename the model to text transforms                               |         |       | 0:29 |   2.2 |
 | STARTED Create the archetype location properties                            |         |       | 3:25 |  15.3 |
-| STARTED Generate file paths as a transform                                  |         |       | 6:29 |  29.1 |
-| STARTED Rename kernel and family                                            |         |       | 1:22 |   6.1 |
+| STARTED Generate file paths as a transform                                  |         |       | 6:29 |  28.9 |
+| STARTED Rename kernel and family                                            |         |       | 1:28 |   6.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -701,6 +701,7 @@ We should check that =enable_unique_file_names= is set to true.
 Key: =quilt.cpp.flat_directory_mode.enabled=.
 
 *** STARTED Rename kernel and family                                  :story:
+    CLOCK: [2017-10-06 Fri 12:19]--[2017-10-06 Fri 12:25] =>  0:06
     CLOCK: [2017-10-06 Fri 12:04]--[2017-10-06 Fri 12:18] =>  0:14
     CLOCK: [2017-10-06 Fri 11:57]--[2017-10-06 Fri 12:03] =>  0:06
     CLOCK: [2017-10-06 Fri 11:32]--[2017-10-06 Fri 11:56] =>  0:24
