--- a/doc/agile/v1/sprint_backlog_06.org
+++ b/doc/agile/v1/sprint_backlog_06.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-10-06 Fri 12:56]
+#+CAPTION: Clock summary at [2017-10-06 Fri 13:00]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *22:31* |       |      | 100.0 |
+| *Total time*                                                                | *22:34* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 22:31   |       |      | 100.0 |
-| Active                                                                      |         | 22:31 |      | 100.0 |
+| Stories                                                                     | 22:34   |       |      | 100.0 |
+| Active                                                                      |         | 22:34 |      | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 2:19 |  10.3 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:45 |   3.3 |
 | CANCELLED Add an "at" field to transform stats                              |         |       | 0:10 |   0.7 |
@@ -28,11 +28,11 @@
 | COMPLETED Consider revamping the project logo                               |         |       | 2:02 |   9.0 |
 | COMPLETED Rename top-level transformations                                  |         |       | 1:33 |   6.9 |
 | COMPLETED Clean-up context usage                                            |         |       | 0:38 |   2.8 |
-| COMPLETED Housekeeper should know of text models                            |         |       | 2:05 |   9.3 |
+| COMPLETED Housekeeper should know of text models                            |         |       | 2:05 |   9.2 |
 | COMPLETED Rename the model to text transforms                               |         |       | 0:29 |   2.1 |
-| STARTED Create the archetype location properties                            |         |       | 3:25 |  15.2 |
-| STARTED Generate file paths as a transform                                  |         |       | 6:29 |  28.8 |
-| STARTED Rename kernel and family                                            |         |       | 1:35 |   7.0 |
+| STARTED Create the archetype location properties                            |         |       | 3:25 |  15.1 |
+| STARTED Generate file paths as a transform                                  |         |       | 6:29 |  28.7 |
+| STARTED Rename kernel and family                                            |         |       | 1:38 |   7.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -701,6 +701,7 @@ We should check that =enable_unique_file_names= is set to true.
 Key: =quilt.cpp.flat_directory_mode.enabled=.
 
 *** STARTED Rename kernel and family                                  :story:
+    CLOCK: [2017-10-06 Fri 12:57]--[2017-10-06 Fri 13:00] =>  0:03
     CLOCK: [2017-10-06 Fri 12:49]--[2017-10-06 Fri 12:56] =>  0:07
     CLOCK: [2017-10-06 Fri 12:19]--[2017-10-06 Fri 12:25] =>  0:06
     CLOCK: [2017-10-06 Fri 12:04]--[2017-10-06 Fri 12:18] =>  0:14
